classDiagram
    %% ========== کلاس‌های پایه و مدیریت داده ==========

    class BaseEntity {
        <<abstract>>
        #quint64 id
        #QDateTime createdAt
        #QDateTime updatedAt
        -static quint64 idCounter
    }

    class ServerDataStore {
        -QMap~quint64, User*~ users
        -QMap~quint64, Book*~ books
        -QMap~quint64, Author*~ authors
        -QMap~quint64, Library*~ libraries
        -QMap~quint64, Shelf*~ shelves
        -QMap~quint64, Review*~ reviews
        -QMap~quint64, Cart*~ carts
        -QMap~quint64, Notification*~ notifications
        -QMap~quint64, Wallet*~ wallets
        -QMap~quint64, Transaction*~ transactions
        -QMap~quint64, Purchase*~ purchases
        -QHash~QString, quint64~ usernameIndex
        -QHash~QString, quint64~ emailIndex
        -QHash~quint64, quint64~ cartOwnerIndex
        -QHash~QString, quint64~ authorNameIndex
    }

    class FileManager {
        -QString baseDirectory
    }

    %% ========== User و نقش‌ها ==========

    class User {
        <<abstract>>
        #Role role
        #QString fullName
        #QString username
        #QString email
        #QString passwordHash
        #quint64 walletId
        #QSet~quint64~ reviewIds
        #QSet~quint64~ notificationIds
        #bool isBlocked
    }

    class NormalUser {
        -quint64 libraryId
        -QSet~Genre~ favoriteGenres
    }

    class Publisher {
        -QSet~quint64~ myBookIds
        -qint64 revenue
        -QString bio
    }

    class Admin {
    }

    %% ========== سیستم کتاب، نویسنده و کتابخانه ==========

    class Author {
        -QString fullName
        -QSet~quint64~ bookIds
    }

    class Book {
        -QString title
        -quint64 authorId
        -quint64 publisherId
        -Genre genre
        -QString description
        -qint64 price
        -double discountPercent
        -QString coverImagePath
        -QString pdfFilePath
        -int salesCount
        -bool isActive
        -bool deletedByAdmin
        -QSet~quint64~ reviewIds
    }

    class Library {
        -quint64 ownerId
        -QSet~quint64~ shelfIds
        -QSet~quint64~ purchasedBookIds
        -QSet~quint64~ savedBookIds
        -QMap~quint64, int~ lastReadPages
    }

    class Shelf {
        -QString name
        -quint64 ownerId
        -QSet~quint64~ bookIds
    }

    %% ========== موجودیت‌های مالی، نظرات و اعلان ==========

    class Review {
        -quint64 userId
        -quint64 bookId
        -QString text
        -int stars
    }

    class Cart {
        -quint64 ownerId
        -QSet~quint64~ bookIds
    }

    class Purchase {
        -quint64 buyerId
        -QSet~quint64~ bookIds
        -qint64 totalAmount
        -QDateTime purchaseDate
    }

    class Notification {
        -quint64 recipientId
        -QString message
        -NotificationType type
        -bool isRead
    }

    class Wallet {
        -quint64 ownerId
        -qint64 balance
        -QVector~quint64~ transactionIds
    }

    class Transaction {
        -quint64 walletId
        -qint64 amount
        -TransactionType type
        -QPair~quint64, qint64~ bookPriceAtPurchase
    }

    %% ========== سرور، شبکه و GUI ==========

    class PdfUploadState {
        <<struct>>
        +QStringList chunks
        +int totalChunks
    }

    class PurchaseOutcome {
        <<struct>>
        +bool success
        +QString failReason
        +quint64 purchaseId
        +double totalAmount
    }

    class ServerCore {
        -ServerNetwork* network
        -QSet~ClientHandler*~ connectedClients
        -QMap~quint64, ClientHandler*~ loggedInClients
        -QMutex dataMutex
        -FileManager fileManager
        -ServerStats stats
        -ServerDataStore data
        -QMap~quint64, PdfUploadState~ pdfUploads
    }

    class ServerNetwork {
    }

    class ClientHandler {
        -quint32 blockSize
        -quint64 userId
        -quint64 recoveryUserId
        -static quint32 MAX_BLOCK_SIZE
    }

    class ServerStats {
        -int connectedUsers
        -int totalRequests
    }

    class ServerDashboard {
        -ServerCore* core
        -bool serverIsRunning
        -quint16 listenPort
        -ServerLogModel* logModel
    }

    class ServerLogModel {
        -QVector~QString~ logLines
        -static int MAX_LOG_LINES
    }

    %% ========== Enums ==========

    class Role {
        <<enumeration>>
        USER
        PUBLISHER
        ADMIN
    }

    class Genre {
        <<enumeration>>
        ROMANCE
        CRIME
        SCIFI
        HORROR
        CLASSIC
        ART
        COMEDY
        HISTORY
    }

    class NotificationType {
        <<enumeration>>
        NEW_BOOK_IN_FAVORITE_GENRE
        DISCOUNT_ON_SAVED_BOOK
        NEW_SALE_FOR_PUBLISHER
        PURCHASE_COMPLETE
    }

    class TransactionType {
        <<enumeration>>
        DEPOSIT
        WITHDRAW
        PURCHASE
        SALE_INCOME
    }

    %% ========== وراثت ==========

    BaseEntity <|-- User
    BaseEntity <|-- Author
    BaseEntity <|-- Book
    BaseEntity <|-- Review
    BaseEntity <|-- Cart
    BaseEntity <|-- Purchase
    BaseEntity <|-- Shelf
    BaseEntity <|-- Notification
    BaseEntity <|-- Wallet
    BaseEntity <|-- Transaction
    BaseEntity <|-- Library

    User <|-- NormalUser
    User <|-- Publisher
    User <|-- Admin

    %% ========== ترکیب و ارتباط سرور ==========

    ServerCore "1" *-- "1" ServerDataStore : data
    ServerCore "1" *-- "1" FileManager : fileManager
    ServerCore "1" *-- "1" ServerStats : stats
    ServerCore "1" *-- "1" ServerNetwork : network
    ServerCore "1" o-- "0..*" ClientHandler : connectedClients
    ServerCore "1" o-- "0..*" PdfUploadState : pdfUploads
    FileManager ..> ServerDataStore : save/load
    ServerNetwork ..> ClientHandler : ایجاد هنگام اتصال
    ServerDashboard "1" --> "1" ServerCore : core
    ServerDashboard "1" *-- "1" ServerLogModel : logModel

    %% ========== روابط دامنه ==========

    NormalUser "1" --> "1" Library : libraryId
    Library "1" --> "0..*" Shelf : shelfIds
    Library "1" --> "0..*" Book : purchased / saved
    Cart "1" --> "0..*" Book : bookIds
    User "1" --> "1" Wallet : walletId
    Wallet "1" --> "0..*" Transaction : transactionIds
    Publisher "1" --> "0..*" Book : myBookIds
    Author "1" --> "0..*" Book : bookIds
    Book "1" --> "1" Author : authorId
    Book "1" --> "1" Publisher : publisherId
    Review "1" --> "1" User : userId
    Review "1" --> "1" Book : bookId
    Purchase "1" --> "1" User : buyerId
    Purchase "1" --> "0..*" Book : bookIds
    Notification "1" --> "1" User : recipientId
    Shelf "1" --> "0..*" Book : bookIds
    User "1" --> "0..*" Review : reviewIds
    User "1" --> "0..*" Notification : notificationIds
